# sdutil

./: .gitignore  README.md  pyproject.toml
sdutil/: __init__.py  __main__.py  colorize.py  fstree.py  sdutil.py
